--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     </div>
   </section>
 
+  <section id="newsletter">
+    <div class="container">
+      <h1>Subscribe To Our Newsletter</h1>
+      <form>
+        <input type="email" placeholder="Enter Email...">
+        <button type="submit" class="button_1">Subscribe</button>
+      </form>
+    </div>
+  </section>
+
 </body>
 
 </html>
